# capability-discovery-protocol

./: .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  protocol_change.md
adp/: __init__.py  main.py
cdp/: __init__.py  main.py
data/: offerings.json  providers.json
docs/: adp-context.md  adp-wire-spec-v0.1.md  architecture.md  cdp-context.md  discovery-model.md  examples-walkthrough.md  examples.md  federation-model.md  github-repo-metadata.md  governance.md  known-limitations.md  overview.md  protocol-overview.md  public-release-checklist.md  python-sdk.md  quickstart.md  ranking-model.md  security-model.md
examples/: agent_discovery.py  curl_examples.sh  federation_demo.py  policy_demo.py  product_discovery.py  service_discovery.py
protocol-vectors/: README.md  discovery_audit_record_v0.1.json  discovery_intent_agent_v0.1.json  discovery_intent_service_v0.1.json  discovery_intent_v0.1.json  discovery_response_v0.1.json  discovery_result_v0.1.json  federation_query_v0.1.json  federation_response_v0.1.json  offering_descriptor_v0.1.json  provider_descriptor_v0.1.json
schema/: README.md  discovery_audit_record.json  discovery_candidate.json  discovery_intent.json  discovery_response.json  discovery_result.json  federation_query.json  federation_response.json  offering_descriptor.json  provider_descriptor.json
sdk/go/: README.md
tests/: conftest.py
(+41 files in other folders)
